Added Register and Login Api with Jwt token
